Add required Java options